--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
