--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
+        - .:/app
+        - /app/node_modules
+        - /app/.next
     environment:
       - NODE_ENV=production
